@@ -1,9 +1,9 @@
 package tk.mybatis.mapper.keysql;
 
 import org.apache.ibatis.session.SqlSession;
-import org.junit.Assert;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import tk.mybatis.mapper.base.BaseTest;
 
 import java.io.IOException;
@@ -12,7 +12,7 @@ import java.io.Reader;
 /**
  * @author liuzh
  */
-@Ignore("这个测试需要使用 MySql 数据库")
+@Disabled("这个测试需要使用 MySql 数据库")
 public class KeySqlTest extends BaseTest {
 
     @Override
@@ -33,11 +33,11 @@ public class KeySqlTest extends BaseTest {
 
             UserAutoIncrement user = new UserAutoIncrement();
             user.setName("liuzh");
-            Assert.assertEquals(1, mapper.insert(user));
-            Assert.assertNotNull(user.getId());
+            Assertions.assertEquals(1, mapper.insert(user));
+            Assertions.assertNotNull(user.getId());
 
             user = mapper.selectByPrimaryKey(user.getId());
-            Assert.assertEquals("liuzh", user.getName());
+            Assertions.assertEquals("liuzh", user.getName());
         } finally {
             sqlSession.close();
         }
@@ -51,11 +51,11 @@ public class KeySqlTest extends BaseTest {
 
             UserAutoIncrementIdentity user = new UserAutoIncrementIdentity();
             user.setName("liuzh");
-            Assert.assertEquals(1, mapper.insert(user));
-            Assert.assertNotNull(user.getId());
+            Assertions.assertEquals(1, mapper.insert(user));
+            Assertions.assertNotNull(user.getId());
 
             user = mapper.selectByPrimaryKey(user.getId());
-            Assert.assertEquals("liuzh", user.getName());
+            Assertions.assertEquals("liuzh", user.getName());
         } finally {
             sqlSession.close();
         }
@@ -69,11 +69,11 @@ public class KeySqlTest extends BaseTest {
 
             UserSqlAfter user = new UserSqlAfter();
             user.setName("liuzh");
-            Assert.assertEquals(1, mapper.insert(user));
-            Assert.assertNotNull(user.getId());
+            Assertions.assertEquals(1, mapper.insert(user));
+            Assertions.assertNotNull(user.getId());
 
             user = mapper.selectByPrimaryKey(user.getId());
-            Assert.assertEquals("liuzh", user.getName());
+            Assertions.assertEquals("liuzh", user.getName());
         } finally {
             sqlSession.close();
         }
@@ -87,11 +87,11 @@ public class KeySqlTest extends BaseTest {
 
             UserSqlBefore user = new UserSqlBefore();
             user.setName("liuzh");
-            Assert.assertEquals(1, mapper.insert(user));
-            Assert.assertEquals(new Integer(12345), user.getId());
+            Assertions.assertEquals(1, mapper.insert(user));
+            Assertions.assertEquals(Integer.valueOf(12345), user.getId());
 
             user = mapper.selectByPrimaryKey(12345);
-            Assert.assertEquals("liuzh", user.getName());
+            Assertions.assertEquals("liuzh", user.getName());
         } finally {
             sqlSession.close();
         }
